<resources>
	<string name="app_name">FootballApps</string>
	
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="match">Match</string>
	<string name="teams">Teams</string>
	<string name="favorite">Favorite</string>
	<string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin non nunc feugiat, euismod lacus
		vel, hendrerit felis. Mauris eget orci sit amet lectus suscipit accumsan eu a lacus. Maecenas nec sapien sit
		amet velit porta imperdiet. Maecenas id aliquam metus. Mauris iaculis malesuada orci vitae accumsan. Vestibulum
		eu orci vitae est dictum ullamcorper. Curabitur elementum nisi ac eleifend interdum. Aenean gravida magna
		maximus commodo efficitur. Sed eu nulla a neque tincidunt malesuada eget sit amet est. Proin fermentum arcu
		urna, nec iaculis metus egestas sit amet. Fusce ut porttitor nisi. Sed molestie, sapien quis accumsan luctus,
...
