<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".presentation.ui.resultsearch.ResultSearchActivity">
	
		<ProgressBar
				android:visibility="gone"
				android:layout_gravity="center"
				android:id="@+id/progressCircular"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/recyclerViewMatch"
				android:layout_width="match_parent"
				android:layout_height="match_parent">
		
		</androidx.recyclerview.widget.RecyclerView>
	
	
</FrameLayout>