<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".presentation.ui.MainActivity">
	<include layout="@layout/app_bar_main"
			 android:id="@+id/toolbar_bar"
			 android:layout_alignParentTop="true"
			 android:layout_width="match_parent"
			 android:layout_height="?attr/actionBarSize"/>
	<FrameLayout
			android:layout_above="@id/bottom_navbar"
			android:id="@+id/lay_container"
			android:layout_below="@id/toolbar_bar"
			android:layout_width="match_parent"
			android:layout_height="match_parent">
	</FrameLayout>
	<com.google.android.material.bottomnavigation.BottomNavigationView
			android:layout_alignParentBottom="true"
			android:id="@+id/bottom_navbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:menu="@menu/menu_bottom_nav">
	
	</com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>